CHANGES: FlipHelper code improvements and refactor, ItemUpdater changes